# lunabotics2020

./: CMakeLists.txt  Excv.sh  ExcvStart.sh  Excvrouter.sh  Excvwifi.sh  MarkerData_1_0.xml  MarkerData_3_5.xml  README.md  ROS.sh  ROSrouter.sh  ROSwifi.sh  RemoteSSH.sh  RemoteSSHrouter.sh  RemoteSSHwifi.sh  TPort.sh  TPortStart.sh  TPortwifi.sh  Task.cpp  Task.h  VoltageOutputs.cpp  package.xml  piStart.sh
arduino/ExcvDoor/: ExcvDoor.ino
arduino/Libraries/ros_lib/xpp_msgs/: RobotParameters.h  RobotStateCartesian.h  RobotStateCartesianTrajectory.h  RobotStateJoint.h  State6d.h  StateLin3d.h  TerrainInfo.h
arduino/ServoControl/: ServoControl.ino
arduino/lidar_sweep/: lidar_sweep.ino
arduino/perception/: perception.ino
arduino/test_bot/: test_bot.ino
bagfiles/: 2019-11-18-17-38-46.bag  2019-11-18-17-56-34.bag  EmptyField.bag  Long_Drive.bag  Quick_Turn.bag  Slow_Turn.bag
camera_info/: head_camera.yaml
config/: ARviz.rviz  LogitechF310.yaml  Map.yaml  Perception.rviz  SLRS_filter.yaml  SLS.rviz  SLS_filter.yaml  default.rviz  robot.yaml  simple_demo_map.yaml
controllers/: controllers.yaml  diff_drive.yaml
description/: dug.xacro  lidar.xacro  test.xacro  transportation.xacro
hw_config/: hardware.yaml
include/: Task.h  dug_hardware_interface.h
include/ctre/: Phoenix.h
include/ctre/phoenix/cci/: CANCoder_CCI.h  MotController_CCI.h
include/ctre/phoenix/jni/: com_ctre_phoenix_motorcontrol_can_MotControllerJNI.h  com_ctre_phoenix_sensors_CANCoderJNI.h
include/ctre/phoenix/motorcontrol/: ControlMode.h  StatorCurrentLimitConfiguration.h  SupplyCurrentLimitConfiguration.h
include/ctre/phoenix/sensors/: CANCoderFaults.h  CANCoderStickyFaults.h
launch/: ARTracker.launch  BaseController.launch  CanifierServo.launch  Control.launch  Excv.launch  ExcvHW.launch  HWInterface.launch  Hardware.launch  Joy.launch  JoyTeleop.launch  KeyboardTele.launch  Map.yaml  PathPlanning.launch  SLS.launch  TPort.launch  TPortHW.launch  Teleop.launch  USBCamera.launch  beacon.launch  beacon_filter.yaml  move_base.launch  nav.launch  noCAMTest.launch  perception.launch  perception.rviz  perception_filter.yaml  simulation.launch  simulationArcadeDrive.launch  simulationBox.launch  simulationSDF.launch  test.launch
launch/simulation/: FullSimulation.launch  SpawnDug.launch  SpawnSLRS.launch  StartGazebo.launch
models/: transportation.gazebo  transportation.xacro
models/box/: box.xacro  model.sdf
models/field/: field.sdf  model.config  model.sdf  model.xacro
models/transportation/: control.yaml  transportation.gazebo  transportation.xacro
models/transportationArcade/: macros.xacro  transportation.gazebo
models/transportationSDF/: control.yaml  model.sdf
parameters/: CostmapCommonParams.yaml
src/: BaseController.cpp  Callback.cpp  Callback.h  CanifierServo.cpp  DeviceIDs.h  DiffDriveController.cpp  DigTasks.cpp  DriveController.cpp  DugAutonomy.cpp  DugHW.cpp  DugNewNode.cpp  DugOdometry.cpp  DugTasks.cpp  EXCV_Conveyer.cpp  ExcvController.cpp  ExcvConveyorHW.cpp  ExcvDriveBaseHW.cpp  ExcvLinearActuatorHW.cpp  ExcvPivotPID.cpp  ExcvTrencherDrivePID.cpp  ExcvTrencherHW.cpp  FlagLocalization.cpp  GlobalPlan.cpp  GlobalPlanner.cpp  GlobalPlanner.h  GlobalVariables.h  HardwareInterface.cpp  JoyMap.h  JoyToTwist.cpp  Joystick.cpp  LaserToPointCloud.cpp  Localization.cpp  NewNode.cpp  Odometry.cpp  Perception.cpp  PerceptionTF.cpp  ROS.sh  ROSwifi.sh  Read_IMU.cpp  SLS.cpp  (+24 more)
worlds/: field.world
