<?xml version="1.0"?>
<package format="2">
	<name>lunabotics2020</name>
	<version>0.0.0</version>
	<description>Custom package for the SDSU Robotics Club NASA Lunabotics 2020 robot</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="joel.quanbeck@jacks.sdstate.edu">Joel Quanbeck</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<url type="website">https://github.com/sdsu-robotics/lunabotics2020</url> -->


	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<author email="joel.quanbeck@jacks.sdstate.edu">Joel Quanbeck</author> -->

	<buildtool_depend>catkin</buildtool_depend>

 	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>



	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>